#82 [BE] refactor: 마일스톤 개별 및 전체조회 응답 수정  (#83)
* refactor: 개별 마일스톤 및 전체 마일스톤 조회시 보내주는 응답 수정

* refactor: 마일스톤 갯수 조회시 열린 마일스톤의 갯수만 응답에 포함하도록 수정