@@ -2,12 +2,14 @@ package com.codesquad.issuetracker.api.milestone.repository;
 
 import com.codesquad.issuetracker.api.filter.dto.MilestoneFilter;
 import com.codesquad.issuetracker.api.milestone.domain.Milestone;
+import com.codesquad.issuetracker.api.milestone.domain.MilestoneVo;
+import com.codesquad.issuetracker.api.milestone.domain.MilestonesVo;
 import java.sql.Date;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.dao.support.DataAccessUtils;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -26,21 +28,16 @@ public class MilestoneRepositoryImpl implements MilestoneRepository {
     private static final String IS_CLOSED = "is_closed";
     private static final String ORGANIZATION_ID = "organization_id";
     private static final String ID = "id";
+    private static final String ISSUE_OPENED_COUNT = "issueOpenedCount";
+    private static final String ISSUE_CLOSED_COUNT = "issueClosedCount";
+    private static final String MILESTONE_ID = "milestoneId";
     private static final String SAVE_SQL =
         "INSERT INTO milestone (title,description,due_date,is_closed,organization_id)"
             + " values (:title,:description,:due_date,:is_closed,:organization_id)";
-    private static final String FIND_BY_ID_SQL =
-        "SELECT id,title,description,due_date,is_closed,organization_id"
-            + " FROM milestone"
-            + " WHERE id = :id";
     private static final String UPDATE_SQL =
         "UPDATE milestone"
             + " SET title = :title,description = :description ,due_date = :due_date,is_closed = :is_closed"
             + " WHERE id = :id";
-    private static final String FIND_ALL_BY_ORGANIZATION_ID_SQL =
-        "SELECT id,title,description,due_date,is_closed,organization_id"
-            + " FROM milestone"
-            + " WHERE organization_id = :organization_id";
     public static final String DELETE_SQL = "DELETE FROM milestone WHERE id = :id";
     private static final String UPDATE_STATUS_SQL =
         "UPDATE milestone"
@@ -53,7 +50,7 @@ public class MilestoneRepositoryImpl implements MilestoneRepository {
     private static final String FIND_COUNT_BY_ORGANIZATION_SQL =
         "SELECT COUNT(id)"
             + " FROM milestone"
-            + " WHERE organization_id = :organization_id";
+            + " WHERE organization_id = :organization_id AND is_closed = false";
     private final NamedParameterJdbcTemplate jdbcTemplate;
 
     @Override
@@ -66,11 +63,28 @@ public class MilestoneRepositoryImpl implements MilestoneRepository {
     }
 
     @Override
-    public Optional<Milestone> findById(Long milestoneId) {
-        Milestone milestone = DataAccessUtils.singleResult(
-            jdbcTemplate.query(FIND_BY_ID_SQL, Map.of(ID, milestoneId), getMilestoneRowMapper()
-            ));
-        return Optional.ofNullable(milestone);
+    public Optional<MilestoneVo> findById(Long milestoneId) {
+        String sql = "SELECT m.id ,m.title, "
+            + "SUM(CASE WHEN i.is_closed = false THEN 1 ELSE 0 END) AS issueOpenedCount, "
+            + "SUM(CASE WHEN i.is_closed = true THEN 1 ELSE 0 END) AS issueClosedCount "
+            + "FROM milestone m "
+            + "LEFT JOIN issue i ON m.id = i.milestone_id "
+            + "WHERE m.is_closed = FALSE AND m.id = :milestoneId "
+            + "GROUP BY m.id ";
+
+        return jdbcTemplate.query(sql,
+            Collections.singletonMap(MILESTONE_ID, milestoneId),
+            milestoneVoRowMapper()).stream().findFirst();
+    }
+
+    private RowMapper<MilestoneVo> milestoneVoRowMapper() {
+        return (rs, rowNum) ->
+            MilestoneVo.builder()
+                .id(rs.getLong(ID))
+                .title(rs.getString(TITLE))
+                .issueOpenedCount(rs.getInt(ISSUE_OPENED_COUNT))
+                .issueClosedCount(rs.getInt(ISSUE_CLOSED_COUNT))
+                .build();
     }
 
     @Override
@@ -85,10 +99,31 @@ public class MilestoneRepositoryImpl implements MilestoneRepository {
     }
 
     @Override
-    public List<Milestone> readAllByOrganizationId(Long organizationId) {
-        return jdbcTemplate.query(FIND_ALL_BY_ORGANIZATION_ID_SQL,
-            Map.of(ORGANIZATION_ID, organizationId),
-            getMilestoneRowMapper());
+    public List<MilestonesVo> readAllByOrganizationId(Long organizationId) {
+        String sql =
+            "SELECT m.id ,m.title, m.description, m.due_date, m.is_closed, "
+                + "SUM(CASE WHEN i.is_closed = false THEN 1 ELSE 0 END) AS issueOpenedCount, "
+                + "SUM(CASE WHEN i.is_closed = true THEN 1 ELSE 0 END) AS issueClosedCount "
+                + "FROM milestone m "
+                + "LEFT JOIN issue i ON m.id = i.milestone_id "
+                + "WHERE m.organization_id = :organization_id "
+                + "GROUP BY m.id ";
+
+        return jdbcTemplate.query(sql, Collections.singletonMap(ORGANIZATION_ID, organizationId),
+            milestonesVoRowMapper());
+    }
+
+    private RowMapper<MilestonesVo> milestonesVoRowMapper() {
+        return (rs, rowNum) ->
+            MilestonesVo.builder()
+                .id(rs.getLong(ID))
+                .title(rs.getString(TITLE))
+                .description(rs.getString(DESCRIPTION))
+                .dueDate(rs.getTimestamp(DUE_DATE).toLocalDateTime().toLocalDate())
+                .isClosed(rs.getBoolean(IS_CLOSED))
+                .issueOpenedCount(rs.getInt(ISSUE_OPENED_COUNT))
+                .issueClosedCount(rs.getInt(ISSUE_CLOSED_COUNT))
+                .build();
     }
 
     @Override
@@ -129,18 +164,6 @@ public class MilestoneRepositoryImpl implements MilestoneRepository {
             .addValue(DUE_DATE, Date.valueOf(milestone.getDueDate()))
             .addValue(IS_CLOSED, milestone.isClosed())
             .addValue(ID, milestone.getId());
-    }
-
-    private static RowMapper<Milestone> getMilestoneRowMapper() {
-        return (rs, rowNum) ->
-            Milestone.builder()
-                .id(rs.getLong(ID))
-                .title(rs.getString(TITLE))
-                .description(rs.getString(DESCRIPTION))
-                .dueDate(rs.getDate(DUE_DATE).toLocalDate())
-                .organizationId(rs.getLong(ORGANIZATION_ID))
-                .isClosed(rs.getBoolean(IS_CLOSED))
-                .build();
     }
 
     private static RowMapper<MilestoneFilter> getMilestoneFilterRowMapper() {
